--- a/search.html
+++ b/search.html
@@ -21,7 +21,17 @@ the upload location of geo-tagged video results.
 
 Author:  Stephen Nicholls, March 10, 2014
 -->
-
+<!--
+<html>
+<head>
+<script>
+    window.location = "http://www.geosearchtool.com";
+</script>
+</head>
+<body></body>   
+</html>
+-->
+<!--   This is the old page (redirect went live on 8/5/2016) -->
 <!DOCTYPE html>
 <html>
   <head>
@@ -35,6 +45,14 @@ Author:  Stephen Nicholls, March 10, 2014
   <body>
     <form id="jt_search_form" action="javascript:clickedSearchButton()">
       <table>
+         <!-- Redirect Announcement --/>
+         <tr>
+          <td width='1050' align="left" valign="top"><font color='white'>
+            Note:  This version of the Geo Search Tool has been officially deprecated as of July 8th, 2016.   This site will re-direct to the new version beginning on August 5th, 2016.
+            </font>
+          </td>  
+        </tr>
+        <--- End Redirect Announcement -->
         <tr>
           <td width='1050' align="right" valign="top">
             <a href="about.html">About</a>
@@ -220,3 +238,4 @@ Author:  Stephen Nicholls, March 10, 2014
     </table>
   </body>
 </html>
+<!-- -->
